# Make_QE_file

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
Make_QE_file/.ipynb_checkpoints/: QE_auto-checkpoint.py  __init__-checkpoint.py  dummy_species-checkpoint.csv
how_to_use/: auto.py  how_to_use.md  how_to_use_jp.md
old/Make_QE_file/: __init__.py  cif2qe_in.py  dummy_species.csv  qe_out2in.py
old/Make_QE_file/.ipynb_checkpoints/: qe_out2cif-checkpoint.py
src/Make_QE_file/: __init__.py  check_output.py  cif_to_params.py  make_input.py  output_to_params.py  plot.py  utils.py  write_new_cif.py
src/Make_QE_file.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Make_QE_file/templates/: template.band_x.in  template.dos.in  template.in  template.projwfc.in  template_smearing.in  template_sol.in
